--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-map-gl": "^7.0.21",
     "react-map-gl-geocoder": "^1.8.1",
     "react-redux": "^8.0.5",
+    "react-search-autocomplete": "^8.5.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "4.9.3",
