--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.21",
     "react-map-gl-geocoder": "^1.8.1",
+    "react-pdf": "^7.0.3",
     "react-redux": "^8.0.5",
     "react-search-autocomplete": "^8.5.2",
     "redux": "^4.2.1",
