--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-pdf": "^7.0.3",
     "react-redux": "^8.0.5",
     "react-search-autocomplete": "^8.5.2",
+    "react-uploader": "^3.37.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "4.9.3",
