--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-map-gl": "^7.0.21",
     "react-map-gl-geocoder": "^1.8.1",
     "react-pdf": "^7.0.3",
+    "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-search-autocomplete": "^8.5.2",
     "react-uploader": "^3.37.0",
