--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coreui/react": "^4.5.2",
     "@emotion/cache": "^11.10.5",
     "@hookform/resolvers": "^2.9.11",
+    "@mapbox/search-js-react": "^1.0.0-beta.16",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.1.3",
