--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coreui/react": "^4.5.2",
     "@emotion/cache": "^11.10.5",
     "@hookform/resolvers": "^2.9.11",
+    "@phntms/react-share": "^1.0.2-rc1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.1.3",
@@ -50,6 +51,7 @@
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-search-autocomplete": "^8.5.2",
+    "react-share": "^4.4.1",
     "react-uploader": "^3.37.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
