--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.js", "pages/index.js", "components/Sidebar.jsx", "components/Section2.tsx", "components/Navbar.jsx", "components/SecondMap.jsx", "components/Mymap.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.js", "pages/index.js", "components/Sidebar.jsx", "components/Section2.tsx", "components/Navbar.jsx", "components/SecondMap.jsx", "components/Mymap.jsx", "components/Layout.tsx"],
   "exclude": ["node_modules"]
 }
