--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-redux-wrapper": "^8.1.0",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
@@ -57,6 +58,7 @@
     "react-uploader": "^3.37.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sitemap": "^7.1.1",
     "typescript": "4.9.3",
     "yup": "^1.0.2"
   },
